# tabi

./: .gitignore  CLAUDE.md  README.md  SECURITY.md  biome.json  docker-compose.yml  lefthook.yml  package.json  tsconfig.json  turbo.json
.claude/hooks/: post-edit.sh  post-stop.sh
.claude/skills/: feature-update.md
.github/: dependabot.yml
.github/workflows/: cargo-audit.yml  ci.yml  codeql.yml  db-migrate.yml  dependabot-auto-merge.yml  dependabot-lockfile.yml  desktop-build.yml  desktop-tag.yml  smoke-test.yml
apps/api/: .env.example  drizzle.config.ts  package.json  tsconfig.json
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  splashscreen.html  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: .env.example  global.d.ts  middleware.ts  next.config.ts  package.json  playwright.config.ts  proxy.ts  tsconfig.json  vercel.json  vitest.config.ts  vitest.setup.ts
docs/: 2026-03-19-desktop-release-fixes.md
docs/architecture/: db-backup-recovery.md  external.md  internal.md  overview.md
docs/development/: release-flow.md
docs/plans/: 2026-02-08-phase2-remaining-features.md  2026-02-08-pwa-offline-design.md  2026-02-08-pwa-offline-implementation.md  2026-02-08-tabi-mvp-design.md  2026-02-08-tabi-mvp-implementation.md  2026-02-09-collaborative-editing-design.md  2026-02-09-collaborative-editing-implementation.md  2026-02-09-day-variants-design.md  2026-02-09-day-variants-implementation.md  2026-02-13-faq-design.md  (+102 more)
scripts/: run-e2e.sh  setup.ts
supabase/: config.toml
(+758 files in other folders)
