[package]
name = "sugara-desktop"
version = "0.1.6"
edition = "2021"

[lib]
name = "sugara_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde_json = "1"
chrono = "0.4"
